[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cm2py"
version = "0.3.6"
authors = [{ name = "SKM GEEK", email = "qestudios17@gmail.com" }]
description = "Circuit Maker 2 save generation and manipulation package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["uuid", "regex"]

[project.urls]
"Homepage" = "https://github.com/QEStudios/cm2py"
"Bug Tracker" = "https://github.com/QEStudios/cm2py/issues"
